--- a/static/style.css
+++ b/static/style.css
@@ -18,13 +18,13 @@ h2              { font-size: 1.2em; }
 .error          { background: #f0d6d6; padding: 0.5em; }
 
 
-img.thumbnail   { max-height: 50px; }
+img.thumbnail   { max-height: 50px; width:36px;}
 ul.book_list    {list-style-type:none;}
 ul.row          {list-style-type:none; vertical-align:middle;margin:1 auto;}
 ul.row_reasonable {list-style-type:none; vertical-align:middle; margin:1 auto; background-color: #ffcccc;}
-li.thumbnail    {display:inline-block; vertical-align:middle;width:auto;}
-li.title        {display:inline-block; vertical-align:middle;width:auto;}
+li.thumbnail    {display:inline-block; vertical-align:middle;width:36px;max-height:50px;}
+li.title        {display:inline-block; vertical-align:middle;width:auto;width: 600px;}
 div.author_publisher {display:block;}
-li.new_price    {display:inline-block; vertical-align:middle;width:auto;}
-li.used_price   {display:inline-block; vertical-align:middle;width:auto;}
+li.new_price    {display:inline-block; vertical-align:middle;width:auto;width: 100px;}
+li.used_price   {display:inline-block; vertical-align:middle;width:auto;width: 100px;}
 li.price_ratio  {display:inline-block; vertical-align:middle;width:auto;}
