--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,7 @@ img.thumbnail   { max-height: 50px; width:36px;}
 ul.book_list    {list-style-type:none;}
 ul.row          {list-style-type:none; vertical-align:middle;margin:1 auto;}
 ul.row_reasonable {list-style-type:none; vertical-align:middle; margin:1 auto; background-color: #ffcccc;}
+ul.row1jpy      {list-style-type:none; vertical-align:middle; margin:1 auto; background-color: #ff9999;}
 li.thumbnail    {display:inline-block; vertical-align:middle;width:36px;max-height:50px;}
 li.title        {display:inline-block; vertical-align:middle;width:auto;width: 380px;}
 div.author_publisher {display:block;}
