--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body            { font-family: sans-serif; background: #f2f2f2; }
 a, h1, h2       { color: #377ba8; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
+h2              { font-size: 1.2em; margin:auto 60px;}
 
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
@@ -19,10 +19,10 @@ h2              { font-size: 1.2em; }
 
 
 img.thumbnail   { max-height: 50px; width:36px;}
-ul.book_list    {list-style-type:none;}
-ul.row          {list-style-type:none; vertical-align:middle;margin:1 auto;}
-ul.row_reasonable {list-style-type:none; vertical-align:middle; margin:1 auto; background-color: #ffcccc;}
-ul.row1jpy      {list-style-type:none; vertical-align:middle; margin:1 auto; background-color: #ff9999;}
+ul.book_list    {list-style-type:none;margin: auto;}
+ul.row          {list-style-type:none; vertical-align:middle;margin:1px auto;}
+ul.row_reasonable {list-style-type:none; vertical-align:middle; margin:1px auto; background-color: #ffcccc;}
+ul.row1jpy      {list-style-type:none; vertical-align:middle; margin:1px auto; background-color: #ff9999;}
 li.thumbnail    {display:inline-block; vertical-align:middle;width:36px;max-height:50px;}
 li.title        {display:inline-block; vertical-align:middle;width:auto;width: 380px;}
 div.author_publisher {display:block;}
@@ -30,5 +30,6 @@ li.new_price    {display:inline-block; vertical-align:middle;width:auto;width: 1
 li.used_price   {display:inline-block; vertical-align:middle;width:auto;width: 100px;}
 li.price_ratio  {display:inline-block; vertical-align:middle;width:auto;}
 
-ul.links        {list-style-type: none;margin-left:40% auto;}
-li.link         {display: inline-block; margin:0 0 3px 0;}
+ul.links        {list-style-type: none; margin:auto 20px;}
+li.link         {display: inline-block; margin:auto 4px; font-size:18px;}
+a.link          {text-decoration:none;}
