--- a/templates/ab.html
+++ b/templates/ab.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name=viewport content="width=device-width, initial-scale=1">
         {% if page<last_page_number %}<link rel="prerender" href= "{{url_for('ab',bookmeter_id=bookmeter_id, page=page+1)}}"/>{% endif %}
-        <title>読みたい安い本を探す- 読書メーターの読みたい本リストからお手頃な本を探す</title>
+        <title>読みたい安い本リスト- 読書メーターの読みたい本リストからお手頃な本を探す</title>
     </head>
     <body>
         <p><h1>読みたい本リスト一覧</h1></p>
