--- a/templates/login.html
+++ b/templates/login.html
@@ -2,14 +2,23 @@
 <html>
     <head>
         <link rel="stylesheet" type= "text/css" href="{{url_for('static',filename='login.css')}}">
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <title>読みたい本リスト- 読書メーターの読みたい本リストからお手頃な本を探す</title>
     </head>
     <body>
-        <div><h1>Find reasonable books</h1>
+        <div><h1><a href="http://bookmeter.com" target="_black">読書メーター</a>のマイページのURLを入力してください</h1>
         {% if msg is defined %}{{msg}}{% endif %}
         <form action="" method="POST">
             <input type="text" name="id" size="35" placeholder="http://bookmeter.com/u/(id)">
             <input type=submit value=Submit>
         </form></div>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-54290310-2', 'auto');
+        ga('send', 'pageview');
+    </script>
     </body>
 </html>
