--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
         <div><h1><a href="http://bookmeter.com" target="_black">読書メーター</a>のマイページのURLを入力してください</h1>
         {% if msg is defined %}{{msg}}{% endif %}
         <form action="" method="POST">
-            <input type="text" name="id" size="35" placeholder="http://bookmeter.com/u/(id)">
+            <input type="text" name="id" size="35" placeholder="https://bookmeter.com/uers/(id)">
             <input type=submit value=Submit>
         </form></div>
     <script>
